# duva

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
duva/: Kommun_Sweref99TM.MAP  __init__.py  core.py  models.py  validate.py
duva/geodata/: Kommun_Sweref99TM.ID  Kommun_Sweref99TM.IND  Kommun_Sweref99TM.TAB  __init__.py  kommun.py  lan.py  regso.py
tests/: test_duva.py  test_duva_df.py  test_duva_from_kod.py  test_duva_many.py  test_enrich_df.py  test_from_code.py  test_from_name.py  test_locate.py  test_locate_many.py  test_search.py
