[project]
name = "duva"
version = "0.1.1"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "geopandas>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["duva*"]

[tool.setuptools.package-data]
duva = ["*.gpkg", "*.TAB", "*.DAT", "*.ID", "*.IND", "*.MAP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

